# qds-cli-pyext

./: .gitignore  CMakeLists.txt  Qage.cpp  Qage.h  SPacker.cpp  SPacker.h  XType.cpp  XType.h  client.cpp  client.h  extmain.cpp  qdsport.cpp  qdsport.h
